--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "@swc/helpers": "^0.5.17",
     "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.539.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
